<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.acheron.email.connector</groupId>
	<artifactId>acheron-email-connector</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>acheron-email-connector</name>
	<description> Email Connector by Acheron</description>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<camunda.connector.core.version>8.8.8</camunda.connector.core.version>
		<camunda.connector.validation.version>8.8.8</camunda.connector.validation.version>
		<version-gson>2.13.2</version-gson>
		<version-junit>5.11.0</version-junit>
		<version-mockito>5.13.0</version-mockito>
		<spring.boot.version>3.5.12</spring.boot.version>
		<aws.sesv2.version>2.42.18</aws.sesv2.version>
		<jackson.databind.version>2.21.2</jackson.databind.version>
		<mycila-plugin.version>4.6</mycila-plugin.version>
		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.camunda.connector</groupId>
			<artifactId>connector-core</artifactId>
			<version>${camunda.connector.core.version}</version>
		</dependency>
		<dependency>
			<groupId>io.camunda.connector</groupId>
			<artifactId>connector-validation</artifactId>
			<version>${camunda.connector.validation.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${version-gson}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-freemarker</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
			<version>${spring.boot.version}</version>
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>sesv2</artifactId>
			<version>${aws.sesv2.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.databind.version}</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>acheron-email-connector</finalName>
		<plugins>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>${mycila-plugin.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<version>${maven-assembly-plugin.version}</version>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
